can now run in parallel browsers. My comp can only handle 2 though

--- a/reports/HTMLreports/report.html
+++ b/reports/HTMLreports/report.html
@@ -121,95 +121,26 @@ $(document).ready(function() {
     <h1>Nightwatch Results</h1>
     <div id="container"><a class="toggleSuccess" href="#">Show/Hide Successes</a>
       <div class="package success">
-        <h2 class="name">&#10003; artsyJewels\testcases\addToCart</h2>
+        <h2 class="name">&#10003; evisions\landingPage\test</h2>
         <div class="suites">
           <div class="suite success">
-            <h3 class="name">Login with valid credentials</h3>
+            <h3 class="name">Argos page loads</h3>
             <ul class="testcases">
               <li class="testcase success">
                 <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#CustomerEmail&gt; was visible after 88 milliseconds.</div>
+                <div class="name">Element &lt;#menu-item-3551&gt; was visible after 82 milliseconds.</div>
               </li>
               <li class="testcase success">
                 <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#CustomerPassword&gt; was visible after 65 milliseconds.</div>
+                <div class="name">Element &lt;[title=&quot;Argos: Enterprise Reporting&quot;]:nth-child(1)&gt; was visible after 1345 milliseconds.</div>
               </li>
               <li class="testcase success">
                 <div class="status">&#10003;</div>
-                <div class="name">Element &lt;[value=&quot;Sign In&quot;]&gt; was visible after 61 milliseconds.</div>
-              </li>
-            </ul>
-          </div>
-          <div class="suite success">
-            <h3 class="name">Add a product to cart</h3>
-            <ul class="testcases">
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;body&gt; was visible after 501 milliseconds.</div>
+                <div class="name">Testing if the page title equals &quot;Enterprise Reporting for Higher Education | Evisions&quot;  - 14 ms.</div>
               </li>
               <li class="testcase success">
                 <div class="status">&#10003;</div>
-                <div class="name">Testing if the page title equals &quot;Account – Artsyjewels&quot;  - 40 ms.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;.site-nav--open&gt; was visible after 62 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#Label-2&gt; was visible after 885 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#gf-products &gt; div:nth-child(1)&gt; was visible after 241 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#AddToCart--product-template&gt; was visible after 140 milliseconds.</div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="package success">
-        <h2 class="name">&#10003; artsyJewels\testcases\login</h2>
-        <div class="suites">
-          <div class="suite success">
-            <h3 class="name">Login with valid credentials</h3>
-            <ul class="testcases">
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#CustomerEmail&gt; was visible after 59 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#CustomerPassword&gt; was visible after 76 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;[value=&quot;Sign In&quot;]&gt; was visible after 381 milliseconds.</div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="package error">
-        <h2 class="name">&#10005; artsyJewels\testcases\tryOnButton</h2>
-        <div class="suites">
-          <div class="suite error">
-            <h3 class="name">Click try on button</h3>
-            <ul class="testcases">
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;.hero__cta&gt; was visible after 974 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;header h1&gt; was visible after 377 milliseconds.</div>
-              </li>
-              <li class="testcase error">
-                <div class="status">&#10005;</div>
-                <div class="name">Testing if element &lt;header h1&gt; contains text: &quot;$50-$100&quot; in 1000 ms. - expected [0;32m&quot;$50-$100&quot;[0m but got: [0;31m&quot;2018 Black Friday Jewelry Sale&quot;[0m Expected &quot;$50-$100&quot; but got: &quot;2018 Black Friday Jewelry Sale&quot;</div>
+                <div class="name">Element &lt;body&gt; was visible after 351 milliseconds.</div>
               </li>
             </ul>
           </div>
