--- a/reports/HTMLreports/report.html
+++ b/reports/HTMLreports/report.html
@@ -121,26 +121,31 @@ $(document).ready(function() {
     <h1>Nightwatch Results</h1>
     <div id="container"><a class="toggleSuccess" href="#">Show/Hide Successes</a>
       <div class="package success">
-        <h2 class="name">&#10003; evisions\landingPage\test</h2>
+        <h2 class="name">&#10003; artsyJewels\testcases\login</h2>
         <div class="suites">
           <div class="suite success">
-            <h3 class="name">Argos page loads</h3>
+            <h3 class="name">Navigate to the login page</h3>
             <ul class="testcases">
               <li class="testcase success">
                 <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#menu-item-3551&gt; was visible after 82 milliseconds.</div>
+                <div class="name">Element &lt;body&gt; was visible after 77 milliseconds.</div>
+              </li>
+            </ul>
+          </div>
+          <div class="suite success">
+            <h3 class="name">Login with valid credentials</h3>
+            <ul class="testcases">
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;#CustomerEmail&gt; was visible after 559 milliseconds.</div>
               </li>
               <li class="testcase success">
                 <div class="status">&#10003;</div>
-                <div class="name">Element &lt;[title=&quot;Argos: Enterprise Reporting&quot;]:nth-child(1)&gt; was visible after 1345 milliseconds.</div>
+                <div class="name">Element &lt;#CustomerPassword&gt; was visible after 105 milliseconds.</div>
               </li>
               <li class="testcase success">
                 <div class="status">&#10003;</div>
-                <div class="name">Testing if the page title equals &quot;Enterprise Reporting for Higher Education | Evisions&quot;  - 14 ms.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;body&gt; was visible after 351 milliseconds.</div>
+                <div class="name">Element &lt;[value=&quot;Sign In&quot;]&gt; was visible after 38 milliseconds.</div>
               </li>
             </ul>
           </div>
