asserting cart added to cart sidebar

--- a/reports/HTMLreports/report.html
+++ b/reports/HTMLreports/report.html
@@ -121,14 +121,14 @@ $(document).ready(function() {
     <h1>Nightwatch Results</h1>
     <div id="container"><a class="toggleSuccess" href="#">Show/Hide Successes</a>
       <div class="package success">
-        <h2 class="name">&#10003; artsyJewels\testcases\login</h2>
+        <h2 class="name">&#10003; artsyJewels\testcases\addToCart</h2>
         <div class="suites">
           <div class="suite success">
-            <h3 class="name">Navigate to the login page</h3>
+            <h3 class="name">Navigate to login page</h3>
             <ul class="testcases">
               <li class="testcase success">
                 <div class="status">&#10003;</div>
-                <div class="name">Element &lt;body&gt; was visible after 77 milliseconds.</div>
+                <div class="name">Element &lt;body&gt; was visible after 445 milliseconds.</div>
               </li>
             </ul>
           </div>
@@ -137,15 +137,128 @@ $(document).ready(function() {
             <ul class="testcases">
               <li class="testcase success">
                 <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#CustomerEmail&gt; was visible after 559 milliseconds.</div>
+                <div class="name">Element &lt;#CustomerEmail&gt; was visible after 768 milliseconds.</div>
               </li>
               <li class="testcase success">
                 <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#CustomerPassword&gt; was visible after 105 milliseconds.</div>
+                <div class="name">Element &lt;#CustomerPassword&gt; was visible after 61 milliseconds.</div>
               </li>
               <li class="testcase success">
                 <div class="status">&#10003;</div>
-                <div class="name">Element &lt;[value=&quot;Sign In&quot;]&gt; was visible after 38 milliseconds.</div>
+                <div class="name">Element &lt;[value=&quot;Sign In&quot;]&gt; was visible after 64 milliseconds.</div>
+              </li>
+            </ul>
+          </div>
+          <div class="suite success">
+            <h3 class="name">add to cart</h3>
+            <ul class="testcases">
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;body&gt; was visible after 216 milliseconds.</div>
+              </li>
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Testing if the page title equals &quot;Account – Artsyjewels&quot;  - 321 ms.</div>
+              </li>
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;.site-nav--open&gt; was visible after 582 milliseconds.</div>
+              </li>
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;#Label-2&gt; was visible after 575 milliseconds.</div>
+              </li>
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;#gf-products &gt; div:nth-child(1)&gt; was visible after 453 milliseconds.</div>
+              </li>
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;#AddToCart--product-template&gt; was visible after 346 milliseconds.</div>
+              </li>
+            </ul>
+          </div>
+          <div class="suite success">
+            <h3 class="name">Cart contains product</h3>
+            <ul class="testcases">
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;#CartContainer .ajaxcart__product:nth-child(1)&gt; was visible after 606 milliseconds.</div>
+              </li>
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Testing if element &lt;#CartContainer .ajaxcart__product:nth-child(1)&gt; is visible  - 60 ms.</div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="package success">
+        <h2 class="name">&#10003; artsyJewels\testcases\login</h2>
+        <div class="suites">
+          <div class="suite success">
+            <h3 class="name">Navigate to the login page</h3>
+            <ul class="testcases">
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;body&gt; was visible after 528 milliseconds.</div>
+              </li>
+            </ul>
+          </div>
+          <div class="suite success">
+            <h3 class="name">Login with valid credentials</h3>
+            <ul class="testcases">
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;#CustomerEmail&gt; was visible after 613 milliseconds.</div>
+              </li>
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;#CustomerPassword&gt; was visible after 284 milliseconds.</div>
+              </li>
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;[value=&quot;Sign In&quot;]&gt; was visible after 48 milliseconds.</div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="package success">
+        <h2 class="name">&#10003; artsyJewels\testcases\tryOnButton</h2>
+        <div class="suites">
+          <div class="suite success">
+            <h3 class="name">Navigate to landing page</h3>
+            <ul class="testcases">
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;body&gt; was visible after 1152 milliseconds.</div>
+              </li>
+            </ul>
+          </div>
+          <div class="suite success">
+            <h3 class="name">Click buy now button</h3>
+            <ul class="testcases">
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;.hero__cta&gt; was visible after 558 milliseconds.</div>
+              </li>
+            </ul>
+          </div>
+          <div class="suite success">
+            <h3 class="name">Collections page loads</h3>
+            <ul class="testcases">
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;body&gt; was visible after 270 milliseconds.</div>
+              </li>
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;#CollectionSection&gt; was visible after 990 milliseconds.</div>
+              </li>
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Testing if element &lt;#CollectionSection&gt; is visible  - 70 ms.</div>
               </li>
             </ul>
           </div>
