--- a/reports/XMLReports/CHROME_70.0.3538.102_Windows_NT_1543118088.html
+++ b/reports/XMLReports/CHROME_70.0.3538.102_Windows_NT_1543118088.html
@@ -109,47 +109,26 @@
       <td colspan="3" title="CHROME 70.0.3538.102 Windows NT "><strong>Browser:</strong> CHROME 70.0.3538.102 Windows NT </td>
     </tr>
     <tr class="overview">
-      <td colspan="3"><strong>Timestamp:</strong> Sat Nov 24 2018 06:34:35 GMT-0800 (Pacific Standard Time)</td>
+      <td colspan="3"><strong>Timestamp:</strong> Sat Nov 24 2018 19:54:48 GMT-0800 (Pacific Standard Time)</td>
     </tr>
     <tr class="overview last">
       <td colspan="3"><strong>Tests:</strong> 0<br></td>
     </tr>
     <tr>
-      <td class="pass"><strong>5</strong> passed</td>
+      <td class="pass"><strong>12</strong> passed</td>
       <td class="skip"><strong>0</strong> errors</td>
       <td class="fail"><strong>0</strong> failures</td>
     </tr>
   </table>
 
-  <h2>evisions\landingPage\test</h2>
+  <h2>artsyJewels\testcases\addToCart</h2>
 
-  <h3>Argos page loads</h3>
+  <h3>Navigate to login page</h3>
   <ul class="assertions">
     <li>
       <span class="success">&#10004;</span>
 
-      Element &lt;#menu-item-3551&gt; was visible after 999 milliseconds.
-
-
-    </li>
-    <li>
-      <span class="success">&#10004;</span>
-
-      Element &lt;[title&#x3D;&quot;Argos: Enterprise Reporting&quot;]:nth-child(1)&gt; was visible after 118 milliseconds.
-
-
-    </li>
-    <li>
-      <span class="success">&#10004;</span>
-
-      Testing if the page title equals &quot;Enterprise Reporting for Higher Education | Evisions&quot;  - 802 ms.
-
-
-    </li>
-    <li>
-      <span class="success">&#10004;</span>
-
-      Element &lt;body&gt; was visible after 2177 milliseconds.
+      Element &lt;body&gt; was visible after 571 milliseconds.
 
 
     </li>
@@ -157,7 +136,108 @@
 
   <p>
     <span class="success"><strong>OK.</strong></span>
-    <span class="success"><strong>4</strong></span> assertions passed. (9.843s)
+    <span class="success"><strong>1</strong></span> assertions passed. (3.885s)
+  </p>
+  <h3>Login with valid credentials</h3>
+  <ul class="assertions">
+    <li>
+      <span class="success">&#10004;</span>
+
+      Element &lt;#CustomerEmail&gt; was visible after 365 milliseconds.
+
+
+    </li>
+    <li>
+      <span class="success">&#10004;</span>
+
+      Element &lt;#CustomerPassword&gt; was visible after 43 milliseconds.
+
+
+    </li>
+    <li>
+      <span class="success">&#10004;</span>
+
+      Element &lt;[value&#x3D;&quot;Sign In&quot;]&gt; was visible after 99 milliseconds.
+
+
+    </li>
+  </ul>
+
+  <p>
+    <span class="success"><strong>OK.</strong></span>
+    <span class="success"><strong>3</strong></span> assertions passed. (3.508s)
+  </p>
+  <h3>add to cart</h3>
+  <ul class="assertions">
+    <li>
+      <span class="success">&#10004;</span>
+
+      Element &lt;body&gt; was visible after 369 milliseconds.
+
+
+    </li>
+    <li>
+      <span class="success">&#10004;</span>
+
+      Testing if the page title equals &quot;Account – Artsyjewels&quot;  - 137 ms.
+
+
+    </li>
+    <li>
+      <span class="success">&#10004;</span>
+
+      Element &lt;.site-nav--open&gt; was visible after 459 milliseconds.
+
+
+    </li>
+    <li>
+      <span class="success">&#10004;</span>
+
+      Element &lt;#Label-2&gt; was visible after 573 milliseconds.
+
+
+    </li>
+    <li>
+      <span class="success">&#10004;</span>
+
+      Element &lt;#gf-products &gt; div:nth-child(1)&gt; was visible after 147 milliseconds.
+
+
+    </li>
+    <li>
+      <span class="success">&#10004;</span>
+
+      Element &lt;#AddToCart--product-template&gt; was visible after 327 milliseconds.
+
+
+    </li>
+  </ul>
+
+  <p>
+    <span class="success"><strong>OK.</strong></span>
+    <span class="success"><strong>6</strong></span> assertions passed. (7.664s)
+  </p>
+  <h3>Cart contains product</h3>
+  <ul class="assertions">
+    <li>
+      <span class="success">&#10004;</span>
+
+      Element &lt;#CartContainer .ajaxcart__product:nth-child(1)&gt; was visible after 573 milliseconds.
+
+
+    </li>
+    <li>
+      <span class="success">&#10004;</span>
+
+      Testing if element &lt;#CartContainer .ajaxcart__product:nth-child(1)&gt; is visible  - 51 ms.
+
+
+    </li>
+  </ul>
+
+  <p>
+    <span class="success"><strong>OK.</strong></span>
+    <span class="success"><strong>2</strong></span> assertions passed. (0.6270s)
   </p>
 
 
