screenshots on failure only

--- a/reports/HTMLreports/report.html
+++ b/reports/HTMLreports/report.html
@@ -121,144 +121,26 @@ $(document).ready(function() {
     <h1>Nightwatch Results</h1>
     <div id="container"><a class="toggleSuccess" href="#">Show/Hide Successes</a>
       <div class="package success">
-        <h2 class="name">&#10003; artsyJewels\testcases\addToCart</h2>
+        <h2 class="name">&#10003; evisions\landingPage\test</h2>
         <div class="suites">
           <div class="suite success">
-            <h3 class="name">Navigate to login page</h3>
+            <h3 class="name">Argos page loads</h3>
             <ul class="testcases">
               <li class="testcase success">
                 <div class="status">&#10003;</div>
-                <div class="name">Element &lt;body&gt; was visible after 418 milliseconds.</div>
-              </li>
-            </ul>
-          </div>
-          <div class="suite success">
-            <h3 class="name">Login with valid credentials</h3>
-            <ul class="testcases">
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#CustomerEmail&gt; was visible after 278 milliseconds.</div>
+                <div class="name">Element &lt;#menu-item-3551&gt; was visible after 229 milliseconds.</div>
               </li>
               <li class="testcase success">
                 <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#CustomerPassword&gt; was visible after 39 milliseconds.</div>
+                <div class="name">Element &lt;[title=&quot;Argos: Enterprise Reporting&quot;]:nth-child(1)&gt; was visible after 54 milliseconds.</div>
               </li>
               <li class="testcase success">
                 <div class="status">&#10003;</div>
-                <div class="name">Element &lt;[value=&quot;Sign In&quot;]&gt; was visible after 112 milliseconds.</div>
-              </li>
-            </ul>
-          </div>
-          <div class="suite success">
-            <h3 class="name">add to cart</h3>
-            <ul class="testcases">
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;body&gt; was visible after 46 milliseconds.</div>
+                <div class="name">Testing if the page title equals &quot;Enterprise Reporting for Higher Education | Evisions&quot;  - 76 ms.</div>
               </li>
               <li class="testcase success">
                 <div class="status">&#10003;</div>
-                <div class="name">Testing if the page title equals &quot;Account – Artsyjewels&quot;  - 12 ms.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;.site-nav--open&gt; was visible after 48 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#Label-2&gt; was visible after 562 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#gf-products &gt; div:nth-child(1)&gt; was visible after 164 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#AddToCart--product-template&gt; was visible after 95 milliseconds.</div>
-              </li>
-            </ul>
-          </div>
-          <div class="suite success">
-            <h3 class="name">Cart contains product</h3>
-            <ul class="testcases">
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#CartContainer .ajaxcart__product:nth-child(1)&gt; was visible after 624 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Testing if element &lt;#CartContainer .ajaxcart__product:nth-child(1)&gt; is visible  - 45 ms.</div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="package success">
-        <h2 class="name">&#10003; artsyJewels\testcases\login</h2>
-        <div class="suites">
-          <div class="suite success">
-            <h3 class="name">Navigate to the login page</h3>
-            <ul class="testcases">
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;body&gt; was visible after 285 milliseconds.</div>
-              </li>
-            </ul>
-          </div>
-          <div class="suite success">
-            <h3 class="name">Login with valid credentials</h3>
-            <ul class="testcases">
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#CustomerEmail&gt; was visible after 404 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#CustomerPassword&gt; was visible after 48 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;[value=&quot;Sign In&quot;]&gt; was visible after 238 milliseconds.</div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="package success">
-        <h2 class="name">&#10003; artsyJewels\testcases\tryOnButton</h2>
-        <div class="suites">
-          <div class="suite success">
-            <h3 class="name">Navigate to landing page</h3>
-            <ul class="testcases">
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;body&gt; was visible after 244 milliseconds.</div>
-              </li>
-            </ul>
-          </div>
-          <div class="suite success">
-            <h3 class="name">Click buy now button</h3>
-            <ul class="testcases">
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;.hero__cta&gt; was visible after 159 milliseconds.</div>
-              </li>
-            </ul>
-          </div>
-          <div class="suite success">
-            <h3 class="name">Collections page loads</h3>
-            <ul class="testcases">
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;body&gt; was visible after 58 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#CollectionSection&gt; was visible after 55 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Testing if element &lt;#CollectionSection&gt; is visible  - 39 ms.</div>
+                <div class="name">Element &lt;body&gt; was visible after 110 milliseconds.</div>
               </li>
             </ul>
           </div>
