--- a/reports/HTMLreports/report.html
+++ b/reports/HTMLreports/report.html
@@ -121,165 +121,14 @@ $(document).ready(function() {
     <h1>Nightwatch Results</h1>
     <div id="container"><a class="toggleSuccess" href="#">Show/Hide Successes</a>
       <div class="package success">
-        <h2 class="name">&#10003; artsyjewels\oldway\testCase1</h2>
-        <div class="suites">
-          <div class="suite success">
-            <h3 class="name">Open homepage and click on headers</h3>
-            <ul class="testcases">
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;body&gt; was visible after 1152 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Testing if the page title equals &quot;Best Online Jewelry Store | Affordable Jewelry Brand – Artsyjewels&quot;  - 100 ms.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;.site-nav--open&gt; was visible after 111 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#Label-2&gt; was visible after 607 milliseconds.</div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="package success">
-        <h2 class="name">&#10003; artsyjewels\oldway\testCase2</h2>
-        <div class="suites">
-          <div class="suite success">
-            <h3 class="name">search functionality is working</h3>
-            <ul class="testcases">
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;body&gt; was visible after 764 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;a[href*=&quot;/search&quot;]&gt; was visible after 568 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;[type=search]&gt; was visible after 93 milliseconds.</div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="package success">
-        <h2 class="name">&#10003; artsyjewels\oldway\testCase3</h2>
-        <div class="suites">
-          <div class="suite success">
-            <h3 class="name">user can login with valid email and password</h3>
-            <ul class="testcases">
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;body&gt; was visible after 373 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#CustomerEmail&gt; was visible after 450 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#CustomerPassword&gt; was visible after 49 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;[value=&quot;Sign In&quot;]&gt; was visible after 47 milliseconds.</div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="package success">
-        <h2 class="name">&#10003; artsyjewels\testcases\addToCart</h2>
-        <div class="suites">
-          <div class="suite success">
-            <h3 class="name">Navigate to login page</h3>
-            <ul class="testcases">
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;body&gt; was visible after 4727 milliseconds.</div>
-              </li>
-            </ul>
-          </div>
-          <div class="suite success">
-            <h3 class="name">Login with valid credentials</h3>
-            <ul class="testcases">
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#CustomerEmail&gt; was visible after 695 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#CustomerPassword&gt; was visible after 38 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;[value=&quot;Sign In&quot;]&gt; was visible after 58 milliseconds.</div>
-              </li>
-            </ul>
-          </div>
-          <div class="suite success">
-            <h3 class="name">add to cart</h3>
-            <ul class="testcases">
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;body&gt; was visible after 236 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Testing if the page title equals &quot;Account – Artsyjewels&quot;  - 409 ms.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;.site-nav--open&gt; was visible after 391 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#Label-2&gt; was visible after 571 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#gf-products &gt; div:nth-child(1)&gt; was visible after 203 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#AddToCart--product-template&gt; was visible after 210 milliseconds.</div>
-              </li>
-            </ul>
-          </div>
-          <div class="suite success">
-            <h3 class="name">Cart contains product</h3>
-            <ul class="testcases">
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#CartDrawer&gt; was visible after 576 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#CartContainer &gt; form &gt; div.ajaxcart__inner.ajaxcart__inner--has-fixed-footer &gt; div.ajaxcart__product&gt; was visible after 593 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Testing if element &lt;#CartContainer &gt; form &gt; div.ajaxcart__inner.ajaxcart__inner--has-fixed-footer &gt; div.ajaxcart__product&gt; is visible  - 50 ms.</div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="package success">
-        <h2 class="name">&#10003; artsyjewels\testcases\collections</h2>
+        <h2 class="name">&#10003; artsyJewels\testcases\collections</h2>
         <div class="suites">
           <div class="suite success">
             <h3 class="name">Navigate to landing page</h3>
             <ul class="testcases">
               <li class="testcase success">
                 <div class="status">&#10003;</div>
-                <div class="name">Element &lt;body&gt; was visible after 3529 milliseconds.</div>
+                <div class="name">Element &lt;body&gt; was visible after 4042 milliseconds.</div>
               </li>
             </ul>
           </div>
@@ -288,7 +137,7 @@ $(document).ready(function() {
             <ul class="testcases">
               <li class="testcase success">
                 <div class="status">&#10003;</div>
-                <div class="name">Element &lt;.hero__cta&gt; was visible after 532 milliseconds.</div>
+                <div class="name">Element &lt;.hero__cta&gt; was visible after 469 milliseconds.</div>
               </li>
             </ul>
           </div>
@@ -297,46 +146,15 @@ $(document).ready(function() {
             <ul class="testcases">
               <li class="testcase success">
                 <div class="status">&#10003;</div>
-                <div class="name">Element &lt;body&gt; was visible after 280 milliseconds.</div>
+                <div class="name">Element &lt;body&gt; was visible after 263 milliseconds.</div>
               </li>
               <li class="testcase success">
                 <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#CollectionSection&gt; was visible after 620 milliseconds.</div>
+                <div class="name">Element &lt;#CollectionSection&gt; was visible after 587 milliseconds.</div>
               </li>
               <li class="testcase success">
                 <div class="status">&#10003;</div>
                 <div class="name">Testing if element &lt;#CollectionSection&gt; is visible  - 187 ms.</div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="package success">
-        <h2 class="name">&#10003; artsyjewels\testcases\login</h2>
-        <div class="suites">
-          <div class="suite success">
-            <h3 class="name">Navigate to the login page</h3>
-            <ul class="testcases">
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;body&gt; was visible after 3418 milliseconds.</div>
-              </li>
-            </ul>
-          </div>
-          <div class="suite success">
-            <h3 class="name">Login with valid credentials</h3>
-            <ul class="testcases">
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#CustomerEmail&gt; was visible after 392 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#CustomerPassword&gt; was visible after 45 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;[value=&quot;Sign In&quot;]&gt; was visible after 40 milliseconds.</div>
               </li>
             </ul>
           </div>
