--- a/reports/HTMLreports/report.html
+++ b/reports/HTMLreports/report.html
@@ -121,14 +121,91 @@ $(document).ready(function() {
     <h1>Nightwatch Results</h1>
     <div id="container"><a class="toggleSuccess" href="#">Show/Hide Successes</a>
       <div class="package success">
-        <h2 class="name">&#10003; artsyJewels\testcases\collections</h2>
+        <h2 class="name">&#10003; artsyJewels\functions\addToCart</h2>
+        <div class="suites">
+          <div class="suite success">
+            <h3 class="name">Navigate to login page</h3>
+            <ul class="testcases">
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;body&gt; was visible after 3243 milliseconds.</div>
+              </li>
+            </ul>
+          </div>
+          <div class="suite success">
+            <h3 class="name">Login with valid credentials</h3>
+            <ul class="testcases">
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;#CustomerEmail&gt; was visible after 356 milliseconds.</div>
+              </li>
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;#CustomerPassword&gt; was visible after 41 milliseconds.</div>
+              </li>
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;[value=&quot;Sign In&quot;]&gt; was visible after 41 milliseconds.</div>
+              </li>
+            </ul>
+          </div>
+          <div class="suite success">
+            <h3 class="name">add to cart</h3>
+            <ul class="testcases">
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;body&gt; was visible after 98 milliseconds.</div>
+              </li>
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Testing if the page title equals &quot;Account – Artsyjewels&quot;  - 279 ms.</div>
+              </li>
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;.site-nav--open&gt; was visible after 42 milliseconds.</div>
+              </li>
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;#Label-2&gt; was visible after 570 milliseconds.</div>
+              </li>
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;#gf-products &gt; div:nth-child(1)&gt; was visible after 249 milliseconds.</div>
+              </li>
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;#AddToCart--product-template&gt; was visible after 176 milliseconds.</div>
+              </li>
+            </ul>
+          </div>
+          <div class="suite success">
+            <h3 class="name">Cart contains product</h3>
+            <ul class="testcases">
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;#CartDrawer&gt; was visible after 566 milliseconds.</div>
+              </li>
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;#CartContainer &gt; form &gt; div.ajaxcart__inner.ajaxcart__inner--has-fixed-footer &gt; div.ajaxcart__product&gt; was visible after 47 milliseconds.</div>
+              </li>
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Testing if element &lt;#CartContainer &gt; form &gt; div.ajaxcart__inner.ajaxcart__inner--has-fixed-footer &gt; div.ajaxcart__product&gt; is visible  - 36 ms.</div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="package success">
+        <h2 class="name">&#10003; artsyJewels\functions\collections</h2>
         <div class="suites">
           <div class="suite success">
             <h3 class="name">Navigate to landing page</h3>
             <ul class="testcases">
               <li class="testcase success">
                 <div class="status">&#10003;</div>
-                <div class="name">Element &lt;body&gt; was visible after 4042 milliseconds.</div>
+                <div class="name">Element &lt;body&gt; was visible after 4507 milliseconds.</div>
               </li>
             </ul>
           </div>
@@ -137,7 +214,7 @@ $(document).ready(function() {
             <ul class="testcases">
               <li class="testcase success">
                 <div class="status">&#10003;</div>
-                <div class="name">Element &lt;.hero__cta&gt; was visible after 469 milliseconds.</div>
+                <div class="name">Element &lt;.hero__cta&gt; was visible after 277 milliseconds.</div>
               </li>
             </ul>
           </div>
@@ -146,15 +223,90 @@ $(document).ready(function() {
             <ul class="testcases">
               <li class="testcase success">
                 <div class="status">&#10003;</div>
-                <div class="name">Element &lt;body&gt; was visible after 263 milliseconds.</div>
+                <div class="name">Element &lt;body&gt; was visible after 584 milliseconds.</div>
               </li>
               <li class="testcase success">
                 <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#CollectionSection&gt; was visible after 587 milliseconds.</div>
+                <div class="name">Element &lt;#CollectionSection&gt; was visible after 497 milliseconds.</div>
               </li>
               <li class="testcase success">
                 <div class="status">&#10003;</div>
-                <div class="name">Testing if element &lt;#CollectionSection&gt; is visible  - 187 ms.</div>
+                <div class="name">Testing if element &lt;#CollectionSection&gt; is visible  - 59 ms.</div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="package success">
+        <h2 class="name">&#10003; artsyJewels\functions\login</h2>
+        <div class="suites">
+          <div class="suite success">
+            <h3 class="name">Navigate to the login page</h3>
+            <ul class="testcases">
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;body&gt; was visible after 3304 milliseconds.</div>
+              </li>
+            </ul>
+          </div>
+          <div class="suite success">
+            <h3 class="name">Login with valid credentials</h3>
+            <ul class="testcases">
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;#CustomerEmail&gt; was visible after 674 milliseconds.</div>
+              </li>
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;#CustomerPassword&gt; was visible after 38 milliseconds.</div>
+              </li>
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;[value=&quot;Sign In&quot;]&gt; was visible after 60 milliseconds.</div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="package success">
+        <h2 class="name">&#10003; evisions\navigation\argosPageLoads</h2>
+        <div class="suites">
+          <div class="suite success">
+            <h3 class="name">Argos page loads</h3>
+            <ul class="testcases">
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;#menu-item-3551&gt; was visible after 103 milliseconds.</div>
+              </li>
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;[title=&quot;Argos: Enterprise Reporting&quot;]:nth-child(1)&gt; was visible after 65 milliseconds.</div>
+              </li>
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Testing if the page title equals &quot;Enterprise Reporting for Higher Education | Evisions&quot;  - 108 ms.</div>
+              </li>
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;body&gt; was visible after 192 milliseconds.</div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="package success">
+        <h2 class="name">&#10003; evisions\navigation\landingPageLoads</h2>
+        <div class="suites">
+          <div class="suite success">
+            <h3 class="name">Landing page loads</h3>
+            <ul class="testcases">
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Expected element &lt;{&quot;selector&quot;:&quot;#et-boc h1&quot;}&gt; text to equal: &quot;Higher Education Software Solutions&quot; - condition was met in 158ms</div>
+              </li>
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;body&gt; was visible after 188 milliseconds.</div>
               </li>
             </ul>
           </div>
